--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # NEXT_PUBLIC_API_URL=http://103.130.212.145:42256
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_URL=http://103.130.215.248:43216/api
 
