--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-lazyload": "^3.2.1",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.30.3",
     "recoil": "^0.7.7",
     "sass": "^1.89.2",
