--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # NEXT_PUBLIC_API_URL=http://103.130.212.145:42256
-# NEXT_PUBLIC_API_URL=http://103.130.215.248:43216/api
-NEXT_PUBLIC_API_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_URL=http://103.130.215.248:43216/api
+# NEXT_PUBLIC_API_URL=http://localhost:8000/api
 
